translation for about, register, login

--- a/app/languages/nl.json
+++ b/app/languages/nl.json
@@ -2,6 +2,27 @@
   "MENUBAR_HOME": "Thuis",
   "MENUBAR_ABOUT": "Over",
   "MENUBAR_LOGIN": "Login",
-  "MENUBAR_REGISTER": "Registeer",
-  "HOME_WELCOME": "Welkom op deze template"
+  "MENUBAR_REGISTER": "Registreer",
+  "HOME_WELCOME": "Welkom op deze template",
+  "ABOUT_TITLE":"Over",
+  "ERROR_TEXT":"Er is een fout opgetreden",
+  "LOGIN_LOGIN": "Login",
+  "LOGIN_EMAIL": "Email",
+  "LOGIN_PASSWORD": "Wachtwoord",
+  "LOGIN_REGISTER": "Registreer",
+  "LOGIN_EMAIL_PLACEHOLDER": "Vul email in",
+  "LOGIN_PASSWORD_PLACEHOLDER":"Vul wachtwoord in",
+  "REGISTER_REGISTER":"Registreer",
+  "REGISTER_USERNAME":"Gebruikersnaam",
+  "REGISTER_EMAIL":"Email",
+  "REGISTER_PASSWORD":"Wachtwoord",
+  "REGISTER_PASSWORD_CONFIRMATION":"Wachtwoord bevestiging",
+  "REGISTER_DATE_OF_BIRTH":"Geboortedatum",
+  "REGISTER_MALE":"Man",
+  "REGISTER_FEMALE":"Vrouw",
+  "REGISTER_USERNAME_PLACEHOLDER":"Vul gebruikersnaam in",
+  "REGISTER_EMAIL_PLACEHOLDER":"Vul email in",
+  "REGISTER_PASSWORD_PLACEHOLDER":"Vul wachtwoord in",
+  "REGISTER_PASSWORD_CONFIRMATION_PLACEHOLDER":"Bevestig wachtwoord",
+  "REGISTER_DATE_OF_BIRTH_PLACEHOLDER":"dd/mm/yyyy"
 }
