added a translation added a brand

--- a/app/languages/nl.json
+++ b/app/languages/nl.json
@@ -6,6 +6,7 @@
   "MENUBAR_LOGOUT": "Log uit",
   "HOME_WELCOME": "Welkom op deze template",
   "ABOUT_TITLE":"Over",
+  "ABOUT_SUBTITLE": "Dit is een algemene uitleg",
   "ERROR_TEXT":"Er is een fout opgetreden",
   "LOGIN_LOGIN": "Login",
   "LOGIN_EMAIL": "Email",
